--- a/Wrangler.toml
+++ b/Wrangler.toml
@@ -1,9 +1,8 @@
-[build]
-command = "npm run build"  # Adjust if using different build command
-
-[build.upload]
-format = "directory" 
-dir = "dist"  # Change to your output directory (e.g., "build", "public")
+name = "wizdevtech-landing25 build token"
+compatibility_date = "2023-10-30"
 
 [env.production]
-route = "wizdevtech.com/*"  # Replace with your domain
+pages_build_output_dir = ".next/standalone"
+
+[env.preview]
+pages_build_output_dir = ".next/standalone"
