--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 2>&1 | tee dev.log",
-    "build": "next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
+    "build": "next build",
     "deploy:prod": "wrangler pages deploy .next/standalone",
     "deploy:preview": "wrangler pages deploy .next/standalone --branch $CF_BRANCH",
     "start": "NODE_ENV=production bun .next/standalone/server.js 2>&1 | tee server.log",
