--- a/Wrangler.toml
+++ b/Wrangler.toml
@@ -1,5 +1,9 @@
 name = "wizdevtech-landing25"
-compatibility_date = "2023-10-30"
+compatibility_date = "2024-12-01"
+main = ".cloudflare/worker.js"
+
+[build]
+command = "bun run build:worker"
 
 [env.production]
 pages_build_output_dir = ".next/standalone"
