--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '22'
 
       - name: Setup Bun
-        uses: oven-sh/bun@v1
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: '1.2.15'
 
